--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@
 .ar-digit:first-child {
 	border-left: 1px solid blue;
 }
+input {
+	width: 100%;
+	border: 1px solid blue;
+	height: 30px;
+	border-radius: 5px;
+}
 button {
 	border-radius: 5px;
 	width: 70px;
